<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ai.labs</groupId>
    <artifactId>eddi</artifactId>
    <packaging>pom</packaging>
    <version>5.0-SNAPSHOT</version>

    <modules>
        <module>expressions</module>
        <module>persistencestore-definition</module>
        <module>sharedutilities</module>
        <module>user-definition</module>
        <module>runtime-definition</module>
        <module>permissions-definition</module>
        <module>configurationrepository-definition</module>
        <module>conversationmemory-definition</module>
        <module>automatedtesting-definition</module>
        <module>httpclient-definition</module>
        <module>httpclient-impl-jetty</module>
        <module>corerest-definition</module>
        <module>staticresourceprovider-definition</module>
        <module>user-impl</module>
        <module>permissions-impl</module>
        <module>persistencestore-impl</module>
        <module>conversationmemory-impl</module>
        <module>automatedtesting-impl</module>
        <module>coreutilities</module>
        <module>configurationrepository-impl</module>
        <module>runtime-impl</module>
        <module>staticresourceprovider-impl</module>
        <module>webserver</module>
        <module>coreserver</module>
        <module>semanticparser-definition</module>
        <module>semanticparser-impl</module>
        <module>conversationlifecycle-definition</module>
        <module>conversationlifecycle-impl</module>
        <module>apiserver</module>
        <module>caching-definition</module>
        <module>caching-impl-infinispan</module>
        <module>conversationcallback-definition</module>
        <module>conversationcallback-impl</module>
        <module>facebookmessenger-definition</module>
        <module>facebookmessenger-impl</module>
        <module>outputgeneration-definition</module>
        <module>outputgeneration-impl</module>
        <module>behavior-impl</module>
        <module>templateengine-definition</module>
        <module>templateengine-impl-thymeleaf</module>
        <module>propertysetter-definition</module>
        <module>propertysetter-impl</module>
        <module>backupservice-defintion</module>
        <module>backupservice-impl</module>
        <module>xmpp-definition</module>
        <module>xmpp-impl</module>
        <module>httpCallsTask-impl</module>
        <module>basemodels</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <quarkus.version>0.19.1</quarkus.version>
        <surefire-plugin.version>2.22.2</surefire-plugin.version>
        <compile-plugin.version>3.8.1</compile-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compile-plugin.version}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemProperties>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    </systemProperties>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- quarkus start -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
            <version>${quarkus.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-undertow</artifactId>
            <version>${quarkus.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-resteasy</artifactId>
            <version>${quarkus.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-keycloak</artifactId>
            <version>${quarkus.version}</version>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <version>${quarkus.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- quarkus end -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.26</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.10.2</version>
        </dependency>

        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- swagger START -->
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>1.5.22</version>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>1.5.22</version>
        </dependency>
        <!-- swagger END -->

        <!-- boiler plate code generation -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
            <version>1.18.8</version>
        </dependency>

        <dependency>
            <groupId>javax.enterprise</groupId>
            <artifactId>cdi-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- testing START -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.27.0</version>
            <scope>test</scope>
        </dependency>
        <!-- testing END -->
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.quarkus</groupId>
                        <artifactId>quarkus-maven-plugin</artifactId>
                        <version>${quarkus.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>native-image</goal>
                                </goals>
                                <configuration>
                                    <enableHttpUrlHandler>true</enableHttpUrlHandler>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
